cabal-version: 1.12

name:           nix-wrangle
version:        0.0.0
build-type:     Simple

executable nix-wrangle
  main-is: Main.hs
  other-modules:
      Paths_nix_wrangle
  hs-source-dirs:
      ./src
  ghc-options: -Wall -Werror
  build-depends:
      aeson
    , aeson-pretty
    , base
    , bytestring
    , directory
    , filepath
    , github
    , hashable
    , mtl
    , optparse-applicative
    , process
    , string-qq
    , text
    , unordered-containers
  default-language: Haskell2010
